# tycho-web

./: .gitignore  README.md  pyproject.toml
backend/: app.py  compose.yaml  config.py  database.py  init-database.sh  main.py  models.py  pyproject.toml  schemas.py  utils.py
backend/alembic/: env.py
backend/alembic/versions/: 1cf8ac8ece86_add_bounding_box_columns.py  4faf1aed025a_.py  930865cd7759_add_band_count_to_raster_and_.py  a1138ff1dbad_change_crs_to_integer.py  aa498dfe53d9_.py  da75231d210f_drop_the_crs_column_crs_will_always_be_.py  e64925a4909c_.py  ee61ef0101cd_add_crs_to_file_record.py  ffa868c314b0_rename_file_table_to_raster.py
backend/routers/: files.py  rasters.py
backend/services/: file_storage.py  file_store.py  geotiff.py  geotiff_service.py  radiometric_correction.py  raster_operation_service.py  raster_operator.py
backend/tests/: conftest.py  test_file_store.py  test_rasters.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AppOverlay.tsx  BandOrder.tsx  BlurDialog.tsx  DensitySliceDialog.tsx  MapClickHandler.tsx
